# nexa-gateway

./: Cargo.toml  README.md  guidelines.md  test-sysinfo.rs  worklog.md
agora/: Cargo.toml
agora/src/: client.rs  lib.rs  message.rs  server.rs  topic.rs
api/: Cargo.toml
api/src/: handlers.rs  lib.rs  main.rs
auth/: Cargo.toml
auth/src/: config.rs  error.rs  jwt.rs  lib.rs  middleware.rs  permissions.rs  service.rs
cli/: Cargo.toml
cli/src/: .gitkeep  agents.rs  configure.rs  dashboard.rs  main.rs  menu.rs  mod.rs  status.rs
common/: Cargo.toml
common/src/: config.rs  database.rs  error.rs  errors.rs  lib.rs  logging.rs  middleware.rs  models.rs
config/: default.yaml  development.yaml  production.yaml  test.yaml
core/: Cargo.toml
core/src/: agent.rs  config.rs  device.rs  error.rs  lib.rs  llm.rs  logs.rs  state.rs  status.rs  tests.rs
dashboard/: Cargo.toml
dashboard/site/: dashboard.css  index.html  working_dashboard.html
dashboard/site/pkg/: dashboard.css  dashboard.js
dashboard/src/: lib.rs  main.rs
dashboard/src/api/: logs.rs  metrics.rs  mod.rs  settings.rs  status.rs
dashboard/src/components/: card.rs  header.rs  metrics_chart.rs  mod.rs  sidebar.rs  status_indicator.rs
dashboard/src/error/: mod.rs
dashboard/src/pages/: home.rs  logs.rs  metrics.rs  mod.rs  not_found.rs  settings.rs
docs/: architecture_diagram.md
gateway/: Cargo.toml
gateway/src/: error.rs  lib.rs  main.rs  middleware.rs  routes.rs
logs/: nexa-gateway.log.2025-02-28
nexa/: Cargo.toml
nexa/src/: main.rs
service/: Cargo.toml
service/src/: auth.rs  error.rs  lib.rs  user.rs
src/: dashboard_server.rs  dashboard_template.html  main.rs
sysinfo-test/: Cargo.toml
sysinfo-test/src/: main.rs
vectordb/: Cargo.toml
vectordb/src/: error.rs  lib.rs
vectordb/src/client/: mod.rs
