[package]
name = "agora"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
common = { path = "../common" }
futures = "0.3.31"
anyhow.workspace = true

[lib]
name = "agora"
path = "src/lib.rs"
