[package]
name = "nexa-gateway-api"
version = "0.1.0"
edition = "2021"
authors = ["Nexa Team"]
description = "API component for Nexa Gateway"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
anyhow = "1.0.96"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
config = "0.15.8"
reqwest = { version = "0.12.12", features = ["json"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "nexa-gateway-api"
path = "src/main.rs"