[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = "0.9.0"

[lib]
name = "auth"
path = "src/lib.rs"
