[package]
name = "auth"
version = "0.1.0"
edition = "2021"
description = "Authentication service for Nexa Gateway"

[dependencies]
# Internal dependencies
common = { path = "../common" }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Web framework
axum = { workspace = true }

# Database
sqlx = { workspace = true }

# Date and time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utils
once_cell = "1.19.0"
http = "1.0.0"
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.3"

[lib]
name = "auth"
path = "src/lib.rs"
