[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Nexa Team"]
description = "Common utilities and shared code for Nexa Gateway"
license = "MIT"
repository = "https://github.com/nexaagents/common"

[dependencies]
# Core dependencies from workspace
serde = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Database
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing-test = "0.2.5"
tempfile = "3.17.1"
