[package]
name = "core"  # Changed from "gateway"
version = "0.1.0"
edition = "2021"
description = "Core API server for Nexa Gateway"
authors = ["Nexa Team"]
license = "MIT"

[dependencies]
# Internal crates
common = { path = "../common" }
auth = { path = "../auth" }
vectordb = { path = "../vectordb" }
agora = { path = "../agora" }

# Core dependencies from workspace
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web server and networking
axum.workspace = true
hyper = { workspace = true }
tower = { workspace = true }
tower-http.workspace = true
reqwest = { workspace = true, features = ["json"] }

# Database
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros"] }

# Add this dependency
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
uuid = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
tokio-tungstenite = { workspace = true }
# Make testing dependencies not optional
vectordb = { path = "../vectordb" }
agora = { path = "../agora" }
