[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
qdrant-client = "1.13.0"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
axum = "0.8.1"

[lib]
name = "vectordb"
path = "src/lib.rs"
